Compiler/tests/typing/bad/testfile-if-1.rs
fn main() { if 42 { } else { } }
